2009-04-24  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 1.7

2009-04-21  Peter Aradi <peter.aradi@blumsoft.eu>

	* src/gfx.c:
	* src/gfh.h:
	* src/main.c:
	Removed compiler warnings.
	Fixes: NB#111833 - "osso-applet-screencalibration:write_config may use
	uninitiazed variable fd"
	* src/gfx.c:
	set WM_NAME to empty string.
	Fixes: NB#111014 - "Screen calibration is seen in switcher view with
	title unknown" 

2009-04-17  Peter Aradi <peter.aradi@blumsoft.eu>
	
	* debian/control: added sudo to package dependencies

2009-04-09  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 1.6

2009-04-09 Peter Aradi <peter.aradi@blumsoft.eu>
	
	* configure.ac:
	* debian/control:
	* main.c:
	* gfx.c:
	* gfx.h:
	- removed tslib dependency, now reading from touchscreen device directly
	Fixes: NB#105334 - "TOP 10: 'Tap closer to target <n>' is not
	displayed..."
	- using hal instead of xorg.conf
	- changed 'esc' button to 'backspace' for cancelling the calibration
	Fixes: NB#105331 - "screen calibration applet still asks to press
	'ESC' key..."
	- application exits if some window would get on top of it, to prevent
	  user from accidentaly miscalibrating the device
	
	Fixes: NB#105917 - "After Screen calibration process , window gets
	minimized."
	
2009-03-10  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 1.5

	Removed auto-generated files and fixed building.

	* configure.ac: 1.5

2009-03-09 Peter Aradi <peter.aradi@blumsoft.eu>

	* src/main.c:
	reset_calibration fixed (restore default values)
	* src/gfx.c:
	* src/gfx.h:
	* src/common.h:
	Restart not required after calibration. "Evdev Axis Calibration"
	device property is set for touchscreen.
	Fixes: NB#95802 - Screen Calibration utility is missing.

2009-02-15 Peter Aradi <peter.aradi@blumsoft.eu>

	* src/main.c:
	* src/common.h:
	Major update, porting to evdev driver.
	tslib is used for reading device coordinates as a workaround;
	xinput did not report correct values, xsp is no longer available.